css/style.css
main{
    margin:auto;
    padding:0px;
    width: 90%;
}
main header{
    margin: 0px;
    width: 100%;
}
.ulsImp{
    width: 90%;
}
.lisImp{
    margin-bottom: 70px;
    width: 100%;
}
.menu{
    display: flex;
    width: 50px;
    padding: 3px;
    list-style: none;
    float: right;
    clear: both;
    transform: translateY(-100%);
}
.btnEdit{
    width: 30px;
    margin-right: 10px;
}
.btnDel{
    width: 30px;
}
.btnAdd{
    position: relative;
    width:100%;
    color: green;
    background:linear-gradient(90deg,rgba(0, 24, 161, 0.144),rgb(0, 24, 161, 0.144),rgb(255,255,255),rgb(0, 24, 161, 0.144),rgb(0, 24, 161, 0.144)) ;
    font-size: 15pt;
    font-weight: bolder;
    border-radius: 15px/20px;
    outline: none;
}
.btnAdd:active{
    background:linear-gradient(90deg,rgba(0, 161, 21, 0.466),rgb(0, 161, 21, 0.466),rgb(255,255,255),rgb(0, 161, 21, 0.466),rgb(0, 161, 21, 0.466)) ;
}
#warning{
    position: fixed;
    visibility: hidden;
    top:-150%;
    left: 50%;
    transform: translate(-50%,-50%);
    transition: all 1s;
    animation: ride-up 1s;
}
#warning.fall{
    visibility: visible;
    top:50%;
    animation: fall 1s;
}
.save{
    position: relative;
    left: 100%;
    color:green;
    transform: translate(-50%,-600%);
    font-weight: bolder;
    animation: ride-up-save 2s;
}
@keyframes ride-up-save {0%{transform: translate(-50%,0%);}100%{transform: translate(-50%,-600%);}}
@keyframes fall {0%{top:-150%}100%{top:50%}}
@keyframes ride-up {0%{top:50%}100%{top:-150%;}}
#w{
    width: 100%;
    padding: 5px;
    background-color: brown;
    color: white;
    text-align: center;
    font-weight: bolder;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}
#sw{
    width: 100%;
    padding: 5px;
    background-color: black;
    color:white;
    text-align: justify;
    font-weight: bolder;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}
#arnaldo{
    width: 100%;
    padding: 5px;
    text-align: center;
    background-color: #888888;
}
#x{
    position: absolute;
    left: 100%;
    transform: translate(-50%,-65%);
}

